--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>impAct | Supply Chain Intelligence</title>
-  </head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="https://api.iconify.design/lucide:orbit.svg?color=%2310b981" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Orion impAct | Command Center</title>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
