--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="https://api.iconify.design/lucide:orbit.svg?color=%2310b981" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Orion impAct | Command Center</title>
 </head>
